// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionRepository should create 1`] = `
Session {
  "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_agent": Object {
    "browser": "browser",
    "geoIp": Object {
      "geoIp": "geoIp",
    },
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "codeMethod": "sha256",
    "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "email": "email@lindorm.io",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": "otpCode",
    "redirectUri": "https://lindorm.io/",
    "responseType": "code token id_token",
  },
  "_clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "agent": Object {
          "browser": "browser",
          "geoIp": Object {
            "geoIp": "geoIp",
          },
          "os": "os",
          "platform": "platform",
          "source": "source",
          "version": "version",
        },
        "authenticated": false,
        "authorization": Object {
          "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "codeMethod": "sha256",
          "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "email": "email@lindorm.io",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "otpCode": "otpCode",
          "redirectUri": "https://lindorm.io/",
          "responseType": "code token id_token",
        },
        "clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "expires": 2020-01-01T07:00:00.000Z,
        "grantType": "email_otp",
        "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "scope": Array [
          "default",
        ],
      },
    },
  ],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "email_otp",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_scope": Array [
    "default",
  ],
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`SessionRepository should find 1`] = `
Session {
  "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_agent": Object {
    "browser": "browser",
    "geoIp": Object {
      "geoIp": "geoIp",
    },
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "codeMethod": "sha256",
    "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "email": "email@lindorm.io",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": "otpCode",
    "redirectUri": "https://lindorm.io/",
    "responseType": "code token id_token",
  },
  "_clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "agent": Object {
          "browser": "browser",
          "geoIp": Object {
            "geoIp": "geoIp",
          },
          "os": "os",
          "platform": "platform",
          "source": "source",
          "version": "version",
        },
        "authenticated": false,
        "authorization": Object {
          "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "codeMethod": "sha256",
          "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "email": "email@lindorm.io",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "otpCode": "otpCode",
          "redirectUri": "https://lindorm.io/",
          "responseType": "code token id_token",
        },
        "clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "expires": 2020-01-01T07:00:00.000Z,
        "grantType": "email_otp",
        "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "scope": Array [
          "default",
        ],
      },
    },
  ],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "email_otp",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_scope": Array [
    "default",
  ],
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`SessionRepository should find many 1`] = `
Array [
  Session {
    "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_agent": Object {
      "browser": "browser",
      "geoIp": Object {
        "geoIp": "geoIp",
      },
      "os": "os",
      "platform": "platform",
      "source": "source",
      "version": "version",
    },
    "_authenticated": false,
    "_authorization": Object {
      "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
      "codeMethod": "sha256",
      "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
      "email": "email@lindorm.io",
      "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
      "otpCode": "otpCode",
      "redirectUri": "https://lindorm.io/",
      "responseType": "code token id_token",
    },
    "_clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_created": 2020-01-01T07:00:00.000Z,
    "_deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_events": Array [
      Object {
        "date": 2020-01-01T07:00:00.000Z,
        "name": "session_created",
        "payload": Object {
          "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "agent": Object {
            "browser": "browser",
            "geoIp": Object {
              "geoIp": "geoIp",
            },
            "os": "os",
            "platform": "platform",
            "source": "source",
            "version": "version",
          },
          "authenticated": false,
          "authorization": Object {
            "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "codeMethod": "sha256",
            "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "email": "email@lindorm.io",
            "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
            "otpCode": "otpCode",
            "redirectUri": "https://lindorm.io/",
            "responseType": "code token id_token",
          },
          "clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "expires": 2020-01-01T07:00:00.000Z,
          "grantType": "email_otp",
          "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "scope": Array [
            "default",
          ],
        },
      },
    ],
    "_expires": 2020-01-01T07:00:00.000Z,
    "_grantType": "email_otp",
    "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_scope": Array [
      "default",
    ],
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
  },
  Session {
    "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_agent": Object {
      "browser": null,
      "geoIp": null,
      "os": null,
      "platform": null,
      "source": null,
      "version": null,
    },
    "_authenticated": false,
    "_authorization": Object {
      "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
      "codeMethod": "sha256",
      "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
      "email": "email@lindorm.io",
      "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
      "otpCode": "otpCode",
      "redirectUri": "https://lindorm.io/",
      "responseType": "code token id_token",
    },
    "_clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_created": 2020-01-01T07:00:00.000Z,
    "_deviceId": null,
    "_events": Array [
      Object {
        "date": 2020-01-01T07:00:00.000Z,
        "name": "session_created",
        "payload": Object {
          "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "agent": Object {
            "browser": null,
            "geoIp": null,
            "os": null,
            "platform": null,
            "source": null,
            "version": null,
          },
          "authenticated": false,
          "authorization": Object {
            "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "codeMethod": "sha256",
            "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "email": "email@lindorm.io",
            "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
            "otpCode": "otpCode",
            "redirectUri": "https://lindorm.io/",
            "responseType": "code token id_token",
          },
          "clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "deviceId": null,
          "expires": 2020-01-01T07:00:00.000Z,
          "grantType": "email_link",
          "refreshId": null,
          "scope": Array [
            "default",
          ],
        },
      },
    ],
    "_expires": 2020-01-01T07:00:00.000Z,
    "_grantType": "email_link",
    "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_refreshId": null,
    "_scope": Array [
      "default",
    ],
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
  },
]
`;

exports[`SessionRepository should update 1`] = `
Session {
  "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_agent": Object {
    "browser": "browser",
    "geoIp": Object {
      "geoIp": "geoIp",
    },
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "codeMethod": "sha256",
    "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "email": "email@lindorm.io",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": "otpCode",
    "redirectUri": "https://lindorm.io/",
    "responseType": "code token id_token",
  },
  "_clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "agent": Object {
          "browser": "browser",
          "geoIp": Object {
            "geoIp": "geoIp",
          },
          "os": "os",
          "platform": "platform",
          "source": "source",
          "version": "version",
        },
        "authenticated": false,
        "authorization": Object {
          "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "codeMethod": "sha256",
          "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "email": "email@lindorm.io",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "otpCode": "otpCode",
          "redirectUri": "https://lindorm.io/",
          "responseType": "code token id_token",
        },
        "clientId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "deviceId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "expires": 2020-01-01T07:00:00.000Z,
        "grantType": "email_otp",
        "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "scope": Array [
          "default",
        ],
      },
    },
  ],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "email_otp",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_scope": Array [
    "default",
  ],
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 1,
}
`;
